Augmenting ipr file with directives to compile with jdk incubator.